--- a/src/pages/contact/ContactPage.css
+++ b/src/pages/contact/ContactPage.css
@@ -44,6 +44,8 @@
     margin-left: 10px; /* Ajusta el margen izquierdo entre los tipos de entrada y los iconos */
     width: 25px; /* Ajusta el ancho según sea necesario */
     height: 25px; /* Ajusta la altura según sea necesario */
+    cursor: pointer;
+
   }
   
   /* Estilos para el contenedor de iconos al final */
